--- a/patch.ubuntu.yml
+++ b/patch.ubuntu.yml
@@ -24,7 +24,11 @@
       shell: shutdown -r now
      
     - name: Wait for Machine to come back up
-      local_action: wait_for host={{ inventory_hostname }} state=started port=22 delay=10
+      local_action:
+        module: wait_for
+          host={{ ansible_ssh_host }}
+          port={{ ansible_ssh_port }}
+          delay=10
 
     - name: Get OS Version
       shell: lsb_release -a
