--- a/ansible/my-playbook.yml
+++ b/ansible/my-playbook.yml
@@ -15,48 +15,51 @@
 
   tasks:
 
-    - name: Copy script
-      copy: src=/home/vagrant/ansible-test/dev-ops-script.sh dest=/home/vagrant$
+    - name: Copy Show Version Script
+      copy: src=/home/vagrant/ansible-test/show-version.sh dest=/home/vagrant/show-version.sh mode=0777
 
-    - name: Execute the script
-      command: sh /home/vagrant/dev-ops-script.sh
+    - name: Copy Get Update Script
+      copy: src=/home/vagrant/ansible-test/get-update.sh dest=/home/vagrant/get-update.sh mode=0777
 
-#    - name: Execute the script
-#      command: sh ~/git/ubuntu-devops/dev-ops-script.sh
-       
-    - name: Get OS Version
-      shell: lsb_release -a
-      register: os_version
+    - name: Copy Get Upgrade Script
+      copy: src=/home/vagrant/ansible-test/get-upgrade.sh dest=/home/vagrant/get-upgrade.sh mode=0777
+
+    - name: Copy Get Dist Upgrade Script
+      copy: src=/home/vagrant/ansible-test/get-dist-upgrade.sh dest=/home/vagrant/get-dist-upgrade.sh mode=0777
+
+    - name: Copy Reboot Script
+      copy: src=/home/vagrant/ansible-test/reboot.sh dest=/home/vagrant/reboot.sh mode=0777
+
+    - name: Copy Uptime Script
+      copy: src=/home/vagrant/ansible-test/show-uptime.sh dest=/home/vagrant/show-uptime.sh mode=0777
+
+    - name: Execute Show Version Script
+      command: sh /home/vagrant/show-version.sh
 
     - name: Print OS Version
       debug: var=os_version.stdout_lines
 
-    - name: Update Apt Cache
-      apt: update_cache=yes
+    - name: Execute Get Update Script
+      command: sh /home/vagrant/get-update.sh
 
-    - name: Upgrade OS
-      apt: upgrade=dist
+    - name: Execute Get Upgrade Script
+      command: sh /home/vagrant/get-upgrade.sh
 
-    - name: Reboot Machine
-      shell: shutdown -r now
-     
+    - name: Execute Get Dist Upgrade Script
+      command: sh /home/vagrant/get-dist-upgrade.sh
+
+    - name: Execute Reboot Script
+      command: sh /home/vagrant/reboot.sh
+
     - name: Wait for Machine to come back up
       local_action:
         module: wait_for
           host={{ ansible_ssh_host }}
           port={{ ansible_ssh_port }}
           delay=10
-
-    - name: Get OS Version
-      shell: lsb_release -a
-      register: os_version
-
+          
     - name: Print OS Version
       debug: var=os_version.stdout_lines
 
-    - name: Get Uptime
-      shell: uptime
-      register: result
-
-    - name: Print Uptime
-      debug: var=result.stdout_lines
+    - name: Execute Uptime Script
+      command: sh /home/vagrant/show-uptime.sh
