--- a/ansible/my-playbook.yml
+++ b/ansible/my-playbook.yml
@@ -1,5 +1,5 @@
 ---
-- name: Transfer and execute a script.
+- name: Execute Dev-Ops script
   hosts: grad-test-remote
   remote_user: vagrant
   become: yes
